[package]
name = "electrsd"
version = "0.1.0"
authors = ["Riccardo Casatta <riccardo@casatta.it>"]
description = "Utility to run a regtest electrs process, useful in integration testing environment"
repository = "https://github.com/RCasatta/electrsd"
documentation = "https://docs.rs/elecrtsd/"
license = "MIT"
edition = "2018"
categories = ["cryptography::cryptocurrencies", "development-tools::testing"]

[dependencies]
tapyrusd = { git = "https://github.com/chaintope/tapyrusd", branch="use_rust_tapyrus" }
electrum-client = { git = "https://github.com/chaintope/rust-electrum-client", default-features = false }
log = { version = "0.4" }
which = { version = "4.2.5" }

[target.'cfg(not(windows))'.dependencies]
nix = { version = "0.25.0" }

[dev-dependencies]
env_logger = { version = "0.10" }

[build-dependencies]
bitcoin_hashes = { version = "0.14", optional = true }
flate2 = { version = "1.0", optional = true }
tar = { version = "0.4", optional = true }
minreq = { version = "2.9.0", default-features = false, optional = true, features = [
  "https",
] }

[features]
legacy = []

# download is not supposed to be used directly only through selecting one of the version feature
download = ["bitcoin_hashes", "flate2", "tar", "minreq"]

electrs_0_5_0 = ["download"]
electrs_0_5_1 = ["download"]

# re-export from tapyrusd
tapyrusd_0_5_2 = ["tapyrusd/0_5_2"]
tapyrusd_0_5_1 = ["tapyrusd/0_5_1"]

